/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.controller.v1;

// The controller service provides control functions for the runtime.
service Controller {
    rpc GetConfiguration(GetConfigurationRequest) returns (GetConfigurationResponse);
    rpc WatchConfiguration(WatchConfigurationRequest) returns (stream WatchConfigurationResponse);
}

message Configuration {
    string store = 1;
    string type = 2;
    string version = 3;
    bytes data = 4;
}

message GetConfigurationRequest {
    string store = 1;
}

message GetConfigurationResponse {
    Configuration configuration = 1;
}

message WatchConfigurationRequest {
    string store = 1;
}

message WatchConfigurationResponse {
    Configuration configuration = 1;
}
